fix nav alignment

--- a/style/styles.css
+++ b/style/styles.css
@@ -12,9 +12,6 @@
   width: 30px;
 }
 
-
-
-
 .modal {
   display: none;
   position: fixed;
@@ -42,7 +39,6 @@
 .modal-content button {
   align-self: flex-end;
 }
-
 
 @media (min-width: 800px) {
   .modal {
@@ -110,10 +106,10 @@ select {
   background-color: transparent;
 }
 
-
-
-
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   font-family: "Montserrat", sans-serif;
 }
 input[type="number"]:focus,
@@ -128,13 +124,53 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0;
 }
 
+.nav-div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+  /* border: solid 1px; */
+  margin: 20px 0;
+  
+}
+
+.nav-left {
+  text-align: left;
+  padding: 0;
+  padding-top: 10px;
+  /* border: solid; */
+  justify-content: flex-start;
+  /* transform: translateX(-10px); */
+}
+
+.nav-right {
+  text-align: right;
+  padding: 0;
+  /* border: solid; */
+  padding-top: 10px;
+  justify-content: flex-end;
+  /* transform: translateX(10px); */
+
+
+}
+
+
+
+.nav-inner {
+transform: scale(1.4);
+}
+
 .nav-btn {
+  overflow: hidden;
+  box-sizing: border-box;
   border: none;
   background-color: transparent;
   color: white;
-  padding: 3px 5px;
-  text-shadow: 2px 3px 4px rgba(0, 0, 0, 0.4);
-  font-size: 50px;
+  /* padding: 3px 5px; */
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+  font-size: 40px;
+  padding: 0;
+  display: flex;
 }
 
 .nav-btn:hover {
@@ -204,7 +240,6 @@ input[type="number"]::-webkit-outer-spin-button {
   color: white;
 }
 
-
 @media (max-width: 700px) {
   .row {
     flex-direction: row;
@@ -216,22 +251,34 @@ input[type="number"]::-webkit-outer-spin-button {
     /* border: solid; */
   }
 
+  .nav-inner {
+    transform: scale(1.2);
+    }
+
   .row label {
     flex-grow: 1;
     flex-shrink: 0;
     flex-basis: 100%;
-    
   }
 
-  .row > input, .row select {
+  .row > input,
+  .row select {
     /* color: #1863dc; */
     /* max-width: 100%; */
     box-sizing: border-box;
     margin: 0;
+    width: 100%;
   }
+
+  /* .nav-div {
+    padding-left: 8px;
+    padding-right: 8px;
+  } */
 }
 
-input, textarea, select {
+input,
+textarea,
+select {
   font-size: 17px;
   -webkit-appearance: none;
   appearance: none;
@@ -241,11 +288,7 @@ input, textarea, select {
   color: #c01919;
 }
 
-
 /* Modal styles */
-
-
-
 
 body {
   font-family: "Roboto", sans-serif;
@@ -256,29 +299,29 @@ body {
 }
 
 .form-row {
-  display: flex;           /* Make the container a flex container */
-  align-items: center;     /* Vertically center the label and select */
-  gap: 10px;               /* Optional: Adds space between the label and select */
+  display: flex; /* Make the container a flex container */
+  align-items: center; /* Vertically center the label and select */
+  gap: 10px; /* Optional: Adds space between the label and select */
 }
-
 
 .row {
   display: flex;
   align-items: center; /* Align items vertically */
-  margin-top: 5px;
+  margin-top: 10px;
+  gap: 10px;
 }
 
 label,
 input[type="number"],
 select {
   flex: 1; /* Equal width for all elements */
-  margin-right: 10px;
+  /* margin-right: 10px; */
 }
 
 button {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
-  padding: 10px 20px;
+  /* padding: 10px 20px; */
   font-size: 16px;
   border: none;
   border-radius: 5px;
@@ -313,8 +356,8 @@ button {
   label,
   input[type="number"],
   select {
-      width: 100%; /* Set width to 100% for smaller screens */
-      margin-right: 0; /* Remove margin between elements */
+    width: 100%; /* Set width to 100% for smaller screens */
+    margin-right: 0; /* Remove margin between elements */
   }
 }
 
@@ -350,18 +393,19 @@ button {
   color: #000; /* Black text color for contrast */
   max-width: 800px; /* Maximum width of the container */
   margin: 10px auto; /* Center horizontally with auto margins */
-  padding: 10px; /* Padding inside the container */
   border-radius: 5px; /* Rounded corners */
   box-shadow: 0 10px 10px rgba(0.2, 0.2, 0.2, 0.2); /* Shadow effect */
   text-align: left; /* Text alignment inside the container */
   display: flex;
+  padding: 15px;
   flex-direction: column;
   align-items: stretch; /* Stretch items to fill container */
   box-sizing: border-box; /* Include padding and border in element's total width and height */
 }
 
-.hidden { display: none; }
-
+.hidden {
+  display: none;
+}
 
 .good {
   color: green;
@@ -387,7 +431,6 @@ button {
 
 .payment-input {
   padding: 10px 5px 10px 5px;
-
 }
 
 .pay-button {
